# sim-fti

./: .gitignore
coding-refernece/: reference_1.py  reference_2_lula.py
solution/A04/: ex_gen_scene_2_franka.py  solution_scene_1.usda  solution_scene_2_franka.usda
solution/A05/: ex_1_world_scene.py  ex_2_timeline_control.py  ex_3_callback_physics.py  ex_4_callback_stage_event.py  ex_5_callback_timeline_event.py  ex_6_add_reference_assets.py  ex_7_create_scene_1.py  ex_franka_simple_pickplace.py
solution/A05/show_case_intro/: ex_intro_gen_scene_2_franka.py
solution/A06/: ex_1_forward_inverse_kinematics.py  ex_2_lula_t-space_traj.py  ex_2_lula_trajectory.py  ex_3_lula_c-space_traj.py  ex_3_pickplace_controller.py  ex_4_pickplace_controller.py  ex_franka_simple_pickplace.py  ex_pickplace_motiongen_script.py  success_rmpflow_controller_v2.py  success_rmpflow_motion_v1.py
solution/A06/backup/: ex_franka_simple_pickplace.py  ex_rmpflow_pickplace.py  success_rmpflow_controller_v3.py
solution/B01/: node-example.py
solution/B02/docker/: Dockerfile.nv_fti_ros_humble
solution/B02/preparation/: load-docker-images.sh  save-docker-images.sh
solution/B03/lecture-og/: jetbot_ex_og.usda
solution/B06/ros/b06/: CMakeLists.txt  package.xml
solution/B06/ros/b06/config/: ros2_controllers.yaml
solution/B06/ros/b06/launch/: pick_place.launch.py  pickplace.launch.py  planner.launch.py
solution/B06/ros/b06/meshes/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
solution/B06/ros/b06/meshes/log/: latest_build
solution/B06/ros/b06/src/: blind_pick_place.cpp  scene_pickplace.cpp
solution/B06/usda/: ArmControllerGraph.usda  b06-2_franka_pickplace_rrt.usda  b06_franka_scene.usda
usda/: franka_controller_scene.usda
